<resources>
    <string name="app_name">NBA Playoffs</string>
    <string name="home_text">Home</string>
    <string name="away_text">Away</string>
    <string name="_3">+3</string>
    <string name="_2">+2</string>
    <string name="_1">+1</string>
    <string name="fouls">Fouls</string>
    <string name="_0">0</string>
    <string name="action_settings">Settings</string>
    <string name="start">start</string>
    <string name="pause">Pause</string>
    <string name="end">end</string>
    <string name="_00_00">00:00</string>
    <string name="set_timer">Timer</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="time_in_minutes">Time in minutes</string>
    <string name="reset">reset</string>
    <string name="resume">resume</string>
    <string name="time_up">Time up!</string>
    <string name="background_image">Background Image</string>
    <string name="home_logo">Home Logo</string>
    <string name="away_logo">Away Logo</string>
    <string name="timer">Timer</string>
</resources>
