<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_background"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/screen"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/screen1"
                android:text="@string/_00_00"
                android:textAllCaps="true"
                android:textColor="#D50000"
                android:textSize="40sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:layout_below="@id/time"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/screen"
            android:gravity="center"
            android:textColor="#76FF03"
            android:textSize="20sp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_text"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/home_img"
                android:contentDescription="@string/home_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/lakers150"/>

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0"
                android:textAllCaps="true"
                android:textColor="#76FF03"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/foul_home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fouls"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/home_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0"
                android:textAllCaps="true"
                android:textColor="#d61"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/away_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/away_text"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/away_img"
                android:contentDescription="@string/away_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/memphis150"/>

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0"
                android:textAllCaps="true"
                android:textColor="#76FF03"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/foul_away_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fouls"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/away_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0"
                android:textColor="#d61"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/result_text"
            android:layout_marginTop="50dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/one_point_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/states"
                    android:text="@string/_1"/>

                <Button
                    android:id="@+id/two_point_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/states"
                    android:text="@string/_2"/>

                <Button
                    android:id="@+id/three_point_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/states"
                    android:text="@string/_3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/one_point_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/states"
                    android:text="@string/_1"/>

                <Button
                    android:id="@+id/two_point_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/states"
                    android:text="@string/_2"/>

                <Button
                    android:id="@+id/three_point_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/states"
                    android:text="@string/_3"/>
            </LinearLayout>
        </LinearLayout>

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/states"
                android:text="@string/start"/>
            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/states"
                android:text="@string/set"/>

            <Button
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/states"
                android:text="@string/pause"/>

            <Button
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/states"
                android:text="@string/end"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

