<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/dialog_screen"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edit_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/time_in_minutes"
        android:inputType="phone"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enter_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/states"
            android:text="@string/set"/>
        <Button
            android:id="@+id/cancel_timer"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/states"
            android:text="@string/cancel"/>


    </LinearLayout>
</LinearLayout>